# empowergrid-project

./: .env.example  .gitignore  Anchor.toml  CODEBASE_OVERVIEW.md  CONTRIBUTING.md  DATABASE_SETUP_INSTRUCTIONS.md  Detailed Analysis of EmpowerGRID Codebase - Complete.txt  Detailed Analysis of EmpowerGRID Codebase.docx  Detailed Analysis of EmpowerGRID Codebase.txt  Dockerfile  EGRID-003-SPEC.md  GITHUB_SETUP_COMPLETE.md  LICENSE  PHASE2_BATCH3_COMPLETION.md  PHASE2_BATCH4_COMPLETION.md  PHASE2_QUICK_START_GUIDE.md  PHASE2_TESTING_SUMMARY.md  PHASE3_BATCH2_COMPLETION.md  PHASE3_BATCH3_COMPLETION.md  PHASE3_BATCH4_COMPLETION.md  PHASE3_COMPLETION_SUMMARY.md  PHASE3_COMPREHENSIVE_TEST_REPORT.md  PHASE3_FINAL_BATCH_COMPLETION.md  PHASE4_COMPLETION.md  README.md  SECURITY-AUDIT.md  Summary of Codebase of EmpowerGRID.md  TEST_EXECUTION_REPORT.md  TEST_FIXES_SUMMARY.md  TEST_SUITE_REVIEW_NOVEMBER_4.md  WSL_STATUS_REPORT.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: .env.example  .env.local.backup  .eslintignore  .eslintrc.json  .prettierignore  ALL_12_PHASES_SUMMARY.md  ALL_PHASES_COMPLETE_SUMMARY.md  DATABASE_SETUP_GUIDE.md  DEPLOYMENT_GUIDE.md  DOCKER_DATABASE_SETUP.md  Dockerfile  EMPOWERGRID_PROGRESS_SUMMARY.md  ESLINT_WARNINGS_FIX_GUIDE.md  FINAL_PROJECT_STATUS.md  FINAL_SESSION_SUMMARY.md  GITHUB_ISSUE.md  GITHUB_ISSUE_SIMPLE.md  MANUAL_TESTING_GUIDE.md  MANUAL_TESTING_RESULTS.md  NEXTJS_BUG_REPORT.md  (+84 more)
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
(+728 files in other folders)
